Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138567

QUndoStack::redo() does not notify state change when command becomes obsolete

XMLWordPrintable

    • 31b0dadb0 (dev), cbb1f8863 (6.10), a349ff1d5 (tqtc/lts-6.8), 956f7a945 (dev), 9b4c15ef5 (dev), 19328a483 (6.10), aa054e76c (6.10), 530569c62 (tqtc/lts-6.8), 410b9611c (tqtc/lts-6.8)

      When the current command in a QUndoStack becomes obsolete during redo(), the command is removed from the stack as expected but the stack does not emit its changed signals and thus its listeners are not notified of the change in the stack state. For example, since QUndoStack::redo() does not emit the QUndoStack::canRedoChanged() and QUndoStack::redoTextChanged() signals when the current command becomes obsolete during its redo, the associated redo QAction is neither disabled nor its text updated.

      Attached example reproduces the issue. 

        For Gerrit Dashboard: QTBUG-138567
        # Subject Branch Project Status CR V

            ali.kianian Ali Kianian
            lysandra.sola Lysandra Sola
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: