QUndoStack: Notify changes when the command is obsolete within redo

If a command gets obsolete within the redo method, the index is not
changed, but the status of canRedo, canUndo, redoText, and undoText
might change.
We should report them when any of these changes are met.

Fixes: QTBUG-138567
Pick-to: 6.8
Change-Id: I172a4e0e3df3a3bc40ac6757d79dde7b376ee96a
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 31b0dadb0f371fc94652782c28024f135a0b6f4b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>